fix: workaround for JIT memory leak

--- a/stackgres-k8s/src/operator/src/main/resources/postgresql-default-values.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/postgresql-default-values.properties
@@ -50,3 +50,5 @@ log_temp_files=0
 log_autovacuum_min_duration=0
 log_line_prefix='%t [%p]: db=%d,user=%u,app=%a,client=%h '
 log_statement=ddl
+# see https://gitlab.com/ongresinc/stackgres/-/issues/741
+jit_inline_above_cost=-1
