--- a/stackgres-k8s/src/api-web/pom.xml
+++ b/stackgres-k8s/src/api-web/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <artifactId>stackgres-parent</artifactId>
     <groupId>io.stackgres</groupId>
-    <version>0.9.3</version>
+    <version>0.9.4-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
