feat: added sgdbops for benchmarks

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
@@ -8,6 +8,7 @@ rules:
   resources:
   - pods
   - pods/exec
+  - pods/log
   - services
   - endpoints
   - persistentvolumeclaims
@@ -49,6 +50,7 @@ rules:
   - sgbackupconfigs
   - sgbackups
   - sgdistributedlogs
+  - sgdbops
   verbs:
   - create
   - watch
