--- a/stackgres-k8s/src/jobs/src/main/resources/crds/SGDbOps.yaml
+++ b/stackgres-k8s/src/jobs/src/main/resources/crds/SGDbOps.yaml
@@ -43,6 +43,8 @@ spec:
                     The kind of operation that will be performed on the SGCluster. Available operations are:
 
                     * `benchmark`: run a benchmark on the specified SGCluster and report the results in the status.
+                    * `vacuum`: perform a [vacuum](https://www.postgresql.org/docs/current/sql-vacuum.html) operation on the specified SGCluster.
+                    * `repack`: run [`pg_repack`](https://github.com/reorg/pg_repack) command on the specified SGCluster.
                 runAt:
                   type: string
                   description: |
@@ -65,6 +67,8 @@ spec:
                     If not specified this default to `1`. Can not be greater than `10`.
                 benchmark:
                   type: object
+                  description: |
+                    Configuration of the benchmark
                   properties:
                     type:
                       type: string
@@ -74,6 +78,8 @@ spec:
                         * `pgbench`: run [pgnech](https://www.postgresql.org/docs/current/pgbench.html) on the specified SGCluster and report the results in the status.
                     pgbench:
                       type: object
+                      description: |
+                        Configuration of [pgbench](https://www.postgresql.org/docs/current/pgbench.html) benchmark
                       properties:
                         databaseSize:
                           type: string
@@ -84,10 +90,6 @@ spec:
                           type: string
                           description: |
                             An ISO 8601 duration format `PnDTnHnMn.nS`, that specify the duration of the benchmark.
-                        type:
-                          type: string
-                          description: |
-                            tpc.
                         usePreparedStatements:
                           type: boolean
                           description: |
@@ -100,6 +102,7 @@ spec:
                           type: integer
                           description: |
                             Number of worker threads within pgbench. Using more than one thread can be helpful on multi-CPU machines. Clients are distributed as evenly as possible among available threads. Default is 1.
+                      required: [ "databaseSize", "duration" ]
                     connectionType:
                       type: string
                       description: |
@@ -107,6 +110,131 @@ spec:
 
                         * `primary-service`: Connect to the primary service
                         * `replicas-service`: Connect to the replicas service
+                  required: [ "type" ]
+                vacuum:
+                  type: object
+                  description: |
+                    Configuration of [vacuum](https://www.postgresql.org/docs/current/sql-vacuum.html) operation
+                  properties:
+                    full:
+                      type: boolean
+                      description: |
+                        If true selects "full" vacuum, which can reclaim more space, but takes much longer and exclusively locks the table.
+                        This method also requires extra disk space, since it writes a new copy of the table and doesn't release the old copy
+                         until the operation is complete. Usually this should only be used when a significant amount of space needs to be
+                         reclaimed from within the table. By default false
+                    freeze:
+                      type: boolean
+                      description: |
+                        If true selects aggressive "freezing" of tuples. Specifying FREEZE is equivalent to performing VACUUM with the
+                         vacuum_freeze_min_age and vacuum_freeze_table_age parameters set to zero. Aggressive freezing is always performed
+                         when the table is rewritten, so this option is redundant when FULL is specified. By default false
+                    analyze:
+                      type: boolean
+                      description: |
+                        If true, updates statistics used by the planner to determine the most efficient way to execute a query. By default true
+                    disablePageSkipping:
+                      type: boolean
+                      description: |
+                        Normally, VACUUM will skip pages based on the visibility map. Pages where all tuples are known to be frozen can always be
+                         skipped, and those where all tuples are known to be visible to all transactions may be skipped except when performing an
+                         aggressive vacuum. Furthermore, except when performing an aggressive vacuum, some pages may be skipped in order to avoid
+                         waiting for other sessions to finish using them. This option disables all page-skipping behavior, and is intended to be
+                         used only when the contents of the visibility map are suspect, which should happen only if there is a hardware or
+                         software issue causing database corruption. By default false
+                    databases:
+                      type: array
+                      description: |
+                        List of database to vacuum or repack, don't specify to select all databases
+                      items:
+                        type: object
+                        required: [ "name" ]
+                        properties:
+                          name:
+                            type: string
+                            description: the name of the database
+                          full:
+                            type: boolean
+                            description: |
+                              If true selects "full" vacuum, which can reclaim more space, but takes much longer and exclusively locks the table.
+                              This method also requires extra disk space, since it writes a new copy of the table and doesn't release the old copy
+                               until the operation is complete. Usually this should only be used when a significant amount of space needs to be
+                               reclaimed from within the table. By default false
+                          freeze:
+                            type: boolean
+                            description: |
+                              If true selects aggressive "freezing" of tuples. Specifying FREEZE is equivalent to performing VACUUM with the
+                               vacuum_freeze_min_age and vacuum_freeze_table_age parameters set to zero. Aggressive freezing is always performed
+                               when the table is rewritten, so this option is redundant when FULL is specified. By default false
+                          analyze:
+                            type: boolean
+                            description: |
+                              If true, updates statistics used by the planner to determine the most efficient way to execute a query. By default true
+                          disablePageSkipping:
+                            type: boolean
+                            description: |
+                              Normally, VACUUM will skip pages based on the visibility map. Pages where all tuples are known to be frozen can always be
+                               skipped, and those where all tuples are known to be visible to all transactions may be skipped except when performing an
+                               aggressive vacuum. Furthermore, except when performing an aggressive vacuum, some pages may be skipped in order to avoid
+                               waiting for other sessions to finish using them. This option disables all page-skipping behavior, and is intended to be
+                               used only when the contents of the visibility map are suspect, which should happen only if there is a hardware or
+                               software issue causing database corruption. By default false
+                repack:
+                  type: object
+                  description: |
+                    Configuration of [`pg_repack`](https://github.com/reorg/pg_repack) command
+                  properties:
+                    noOrder:
+                      type: boolean
+                      description: |
+                        If true do vacuum full instead of cluster. By default false.
+                    waitTimeout:
+                      type: string
+                      description: |
+                        If specified, an ISO 8601 duration format `PnDTnHnMn.nS` to set a timeout to cancel other backends on conflict.
+                    noKillBackend:
+                      type: boolean
+                      description: |
+                        If true don't kill other backends when timed out. By default false.
+                    noAnalyze:
+                      type: boolean
+                      description: |
+                        If true don't analyze at end. By default false.
+                    excludeExtension:
+                      type: boolean
+                      description: |
+                        If true don't repack tables which belong to specific extension. By default false.
+                    databases:
+                      type: array
+                      description: |
+                        List of database to vacuum or repack, don't specify to select all databases
+                      items:
+                        type: object
+                        required: [ "name" ]
+                        properties:
+                          name:
+                            type: string
+                            description: the name of the database
+                          noOrder:
+                            type: boolean
+                            description: |
+                              If true do vacuum full instead of cluster. By default false.
+                          waitTimeout:
+                            type: string
+                            description: |
+                              If specified, an ISO 8601 duration format `PnDTnHnMn.nS` to set a timeout to cancel other backends on conflict.
+                          noKillBackend:
+                            type: boolean
+                            description: |
+                              If true don't kill other backends when timed out. By default false.
+                          noAnalyze:
+                            type: boolean
+                            description: |
+                              If true don't analyze at end. By default false.
+                          excludeExtension:
+                            type: boolean
+                            description: |
+                              If true don't repack tables which belong to specific extension. By default false.
               required: ["sgCluster", "op"]
             status:
               type: object
