fix: upgrade timeout

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
@@ -16,7 +16,7 @@ spec:
   template:
     metadata:
       labels:
-        app: "{{ .Release.Name }}-create-certificate"
+        app: stackgres-operator
         scope: init
         job: create-certificate
     spec:
