--- a/stackgres-k8s/install/helm/stackgres-operator/templates/init-service-account.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/init-service-account.yaml
@@ -58,5 +58,9 @@ spec:
           - "/bin/bash"
           - "-ecx"
           - |
+            {{- if .Release.IsUpgrade }}
+            kubectl scale --timeout 1h --replicas 0 -n '{{ .Release.Namespace }}' 'deployment/{{ .Release.Name }}'
+            {{- else }}
             true
+            {{- end }}
       restartPolicy: OnFailure
